--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/icons/icons8-website-48.png"
+      type="image/x-icon"
+    />
     <title>WebStudio</title>
   </head>
 
+  <!-- #region -->
+  <!-- #endregion -->
   <body>
-    <!-- Шапка -->
-    <header>  
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="#">Studio</a>
+    <!-- #region-Header -->
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="logo-title">
+          <span class="header-logo">Web</span>Studio</a
+        >
+        <ul class="header-list">
+          <li class="header-item">
+            <a class="header-link" href="#">Studio</a>
           </li>
-          <li>
-            <a href="#">Portfolio</a>
+          <li class="header-item">
+            <a class="header-link" href="#">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="header-item">
+            <a class="header-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
+        <ul class="contact-list">
+          <li class="header-contact">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
+          <li class="header-contact">
             <a href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
-
+    <!-- #endregion-Header -->
     <main>
-      <!-- Блок Герой -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <!-- #region-Hero -->
+      <section class="hero-image">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
-      <!-- Особливості -->
+      <!-- #endregion-Hero -->
+
+      <!-- #region-Features -->
       <section>
         <h2>Features</h2>
         <ul>
@@ -75,23 +95,35 @@
           </li>
         </ul>
       </section>
-      <!-- Наша команда -->
+      <!-- #endregion-features -->
+
+      <!-- #region-Team -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark.jpg" alt="mark" width="264" height="260" />
+            <img
+              src="./images/team/mark.jpg"
+              alt="mark"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom.jpg" alt="tom" width="264" height="260" />
+            <img
+              src="./images/team/tom.jpg"
+              alt="tom"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/camila.jpg"
+              src="./images/team/camila.jpg"
               alt="camila"
               width="264"
               height="260"
@@ -101,7 +133,7 @@
           </li>
           <li>
             <img
-              src="./images/daniel.jpg"
+              src="./images/team/daniel.jpg"
               alt="daniel"
               width="264"
               height="260"
@@ -111,8 +143,77 @@
           </li>
         </ul>
       </section>
+      <!-- #endregion-Team -->
+
+      <!-- #region-Portfolio -->
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <h3>Banking App</h3>
+            <p>App</p>
+            <img
+              src="./images/portfolio/Banking App.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+            <img
+              src="./images/portfolio/Cashless Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <h3>Meditation App</h3>
+            <p>App</p>
+            <img
+              src="./images/portfolio/Meditation App.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+            <img
+              src="./images/portfolio/Taxi Service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+            <img
+              src="./images/portfolio/Screen Illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+            <img
+              src="./images/portfolio/Online Courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <!-- #endregion-Portfolio -->
     </main>
-    <!-- Підвал -->
+    <!-- #region-Footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
@@ -120,5 +221,6 @@
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- #endregion-Footer -->
   </body>
 </html>
