--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@300;400;500;700&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css"
+      integrity="sha512-3axTZ/bKFZH5/qLFTl4U+mDbBDFW+5QO5L7D1HnOhlhJbcNDIVJxoNm6It77g0eUdzfKZlHirayqRC2qJaAOJw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
     <link
@@ -19,9 +24,6 @@
     />
     <title>WebStudio</title>
   </head>
-
-  <!-- #region -->
-  <!-- #endregion -->
   <body>
     <!-- #region-Header -->
     <header class="header">
@@ -43,16 +45,17 @@
       </nav>
       <address>
         <ul class="contact-list">
-          <li class="header-contact">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="contact-item">
+            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="header-contact">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="contact-item">
+            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <!-- #endregion-Header -->
+
     <main>
       <!-- #region-Hero -->
       <section class="hero-image">
@@ -224,3 +227,5 @@
     <!-- #endregion-Footer -->
   </body>
 </html>
+<!-- #region -->
+<!-- #endregion -->
