--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.0/modern-normalize.min.css"
-      integrity="sha512-3axTZ/bKFZH5/qLFTl4U+mDbBDFW+5QO5L7D1HnOhlhJbcNDIVJxoNm6It77g0eUdzfKZlHirayqRC2qJaAOJw=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
@@ -28,8 +28,8 @@
     <!-- #region-Header -->
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="logo-title">
-          <span class="header-logo">Web</span>Studio</a
+        <a class="logo header-logo" href="./index.html">
+          Web<span class="logo-dark">Studio</span></a
         >
         <ul class="header-list">
           <li class="header-item">
@@ -46,52 +46,57 @@
       <address>
         <ul class="contact-list">
           <li class="contact-item">
-            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-item">
-            <a class="contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contact-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <!-- #endregion-Header -->
 
+    <!-- #region-Main -->
     <main>
       <!-- #region-Hero -->
       <section class="hero-image">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+        <button class="btn hero-btn" type="button">Order Service</button>
       </section>
       <!-- #endregion-Hero -->
 
       <!-- #region-Features -->
-      <section>
-        <h2>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="features">
+        <h2 class="features-title visually-hidden">Features</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-card-title">Strategy</h3>
+            <p class="features-description">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-card-title">Punctuality</h3>
+            <p class="features-description">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-card-title">Diligence</h3>
+            <p class="features-description">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-item">
+            <h3 class="features-card-title">Technologies</h3>
+            <p class="features-description">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -101,112 +106,112 @@
       <!-- #endregion-features -->
 
       <!-- #region-Team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/team/mark.jpg"
               alt="mark"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-pre-title">Mark Guerrero</h3>
+            <p class="team-description">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/tom.jpg"
               alt="tom"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-pre-title">Tom Ford</h3>
+            <p class="team-description">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/camila.jpg"
               alt="camila"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-pre-title">Camila Garcia</h3>
+            <p class="team-description">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/daniel.jpg"
               alt="daniel"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-pre-title">Daniel Wilson</h3>
+            <p class="team-description">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- #endregion-Team -->
 
       <!-- #region-Portfolio -->
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <h3>Banking App</h3>
-            <p>App</p>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Banking App</h3>
+            <p class="portfolio-text">App</p>
             <img
-              src="./images/portfolio/Banking App.jpg"
+              src="./images/portfolio/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
           </li>
-          <li>
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
             <img
-              src="./images/portfolio/Cashless Payment.jpg"
+              src="./images/portfolio/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
           </li>
-          <li>
-            <h3>Meditation App</h3>
-            <p>App</p>
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
             <img
-              src="./images/portfolio/Meditation App.jpg"
+              src="./images/portfolio/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
           </li>
-          <li>
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
             <img
-              src="./images/portfolio/Taxi Service.jpg"
+              src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
           </li>
-          <li>
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
             <img
-              src="./images/portfolio/Screen Illustrations.jpg"
+              src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
           </li>
-          <li>
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <h3 class="portfolio-pre-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
             <img
-              src="./images/portfolio/Online Courses.jpg"
+              src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
@@ -216,10 +221,14 @@
       </section>
       <!-- #endregion-Portfolio -->
     </main>
+    <!-- #endregion -->
+
     <!-- #region-Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo footer-logo" href="./index.html">
+        Web<span class="logo-light">Studio</span></a
+      >
+      <p class="footer-desription">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
