--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         >
         <ul class="header-list">
           <li class="header-item">
-            <a class="header-link" href="#">Studio</a>
+            <a class="header-link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Portfolio</a>
+            <a class="header-link" href="">Portfolio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="#">Contacts</a>
+            <a class="header-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contact">
         <ul class="contact-list">
           <li class="contact-item">
             <a class="contact-link" href="mailto:info@devstudio.com"
@@ -158,64 +158,64 @@
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Banking App</h3>
-            <p class="portfolio-text">App</p>
             <img
               src="./images/portfolio/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
             <img
               src="./images/portfolio/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Meditation App</h3>
-            <p class="portfolio-text">App</p>
             <img
               src="./images/portfolio/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
             <img
               src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
             <img
               src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
           <li class="portfolio-item">
-            <h3 class="portfolio-pre-title">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
             <img
               src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
+            <h3 class="portfolio-pre-title">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
